# ProjetBanque

./: CMakeLists.txt  GROUPE8CIR2.txt  README.md  start.cpp
ProjetBanque/: CMakeLists.txt  StartNEMMBank.bat  UserBankList.json  example_write_read.json
ProjetBanque/Boost_JSON/: .gitignore  CMakeLists.txt  write_read_json.cpp
ProjetBanque/customer/: CMakeLists.txt  Customer.cpp  Customer.hpp  Customer_for_JSON.cpp  Customer_for_JSON.hpp
ProjetBanque/socket/: CMakeLists.txt  bank1.cpp  bank2.cpp  bank3.cpp  bank4.cpp  central.cpp  client.cpp  client.hpp
ProjetBanque/socket/socket_customer/: client_customer.cpp  server_customer.cpp
ProjetBanque/test_wxWidgets/: CMakeLists.txt  My_new_Customer_dialog.cpp  My_new_Customer_dialog.hpp  example_of_use.cpp  example_of_use.hpp
